# Huffman

./: .gitignore  CMakeLists.txt  input.txt  main.c  main.cpp  output.txt  output2.txt
Libs/: CMakeLists.txt
Libs/Decoding/: decoding.c  decoding.h
Libs/Kamysh/: iak_header.h  iak_source.c  iak_source.cpp
Libs/Kravchi_88/: Robin_Bobin_Barabek.c  Robin_Bobin_Barabek.h
Libs/priority_queue/: priority_queue.c  priority_queue.h
Libs/utils/: utils.c  utils.h
